assets/css/style.css
/* Global CSS */

body {
    background-image: linear-gradient(rgb(17, 29, 141), white);
    min-height: 100vh;
    margin: 0;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer {
    position: fixed;
    bottom: 0;
    font-size: 1.2em;
    font-weight: bold;
    text-align: center;
    width: 100%;
    margin-top: -200px;
}

/* Default styles for smallest screens */

/* Index page CSS */
.instructions {
    position: absolute;
    background: rgba(255, 255, 255, 0.8);
    filter: drop-shadow(black 1rem 1rem 10px);
    font-size: 0.75em;
    left: 5%;
    top: 40%;
    width: 90%;
    border: 2px solid #000;
    border-radius: 10px;
    font-weight: bold;
    padding: 0.25em;
}

/* 404 Page */

/* Game page CSS */
.trainers_image {
    width: 100%;
    height: auto;
}

#card-area {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

#player-card, #opponent-card {
    width: 50%;
}

.card-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: auto;
}

.card {
    width: 100%;
    background: transparent;
}

.card-name {
    position: absolute;
    top: 0.5em;
    left: 50%;
    transform: translateX(-50%);
    font-size: 0.9em;
    font-weight: bold;
    text-align: center;
    color: black;
    z-index: 10;
}

.card-image {
    width: 100%;
    height: auto;
    border: 1px solid black;
    border-radius: 5%;
    filter: drop-shadow(black 1rem 1rem 10px);
}

.card-stats {
    position: absolute;
    display: grid;
    grid-template-columns: 1fr 1fr;
    top: 55%;
    width: 90%;
    bottom: 5px;
    left: 17%;
}

.stat-item {
    font-size: 0.9em;
    border: 1px solid black;
    background: rgba(255, 255, 255, 0.8);
    border-radius: 0.25em;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    transition: background-color 0.3s, color 0.3s; 
}

.stat-item:hover {
    background-color: rgba(0, 123, 255, 0.8);
    color: white; 
}

.stat-item:active {
    background-color: rgba(0, 86, 179, 0.8);
    color: white; 
}

.stat-name, .stat-value {
    font-size: 0.8em;
    padding: 0;
}

.hidden {
    display: none;
}

#deck-size-area {
    background: rgba(255, 255, 255, 0.8);
    filter: drop-shadow(black 1rem 1rem 10px);
    width: 100%;
    border: 2px solid #000;
    border-radius: 10px;
    margin-top: 10%;
    margin-left: 0.15em;
}

.player-deck-text, .opponent-deck-text {
    width: 30%;
    padding-left: 1em;
}

.player-deck-num, .opponent-deck-num {
    width: 20%;
    padding: 1em;
    padding-left: 2em;
}

#message-area {
    position: absolute;
    background: rgba(255, 255, 255, 0.8);
    filter: drop-shadow(black 1rem 1rem 10px);
    top: 110%;
    left: 10%;
    width: 80%;
    border: 2px solid #000;
    border-radius: 10px;
    font-weight: bold;
    text-align: center;
    padding: 0.5em;
}

/* Adjustments for larger screens */
@media (min-width: 375px) {
    .card-stats {
        top: 8em;
    }
}

@media (min-width: 576px) {
    #player-card, #opponent-card {
        width: 48%;
    }
    .card-container {
        width: 100%;
        height: auto;
    }

    .card {
        width: 90%;
    }

    .card-name {
        font-size: 1.2em;
    }

    .card-stats {
        grid-template-columns: 1fr;
        bottom: 20px;
        width: 70%;
    }

    .stat-item {
        font-size: 1em;
    }

    .stat-name, .stat-value {
        font-size: 1em;
    }
}

